src/test/ui/consts/const-unwrap.stderr
error: any use of this value will cause an error
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL |             None => panic!("called `Option::unwrap()` on a `None` value"),
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                     |
   |                     the evaluated program panicked at 'called `Option::unwrap()` on a `None` value', $DIR/const-unwrap.rs:9:38
   |                     inside `Option::<i32>::unwrap` at $SRC_DIR/core/src/panic.rs:LL:COL
   |                     inside `BAR` at $DIR/const-unwrap.rs:9:18
   | 
  ::: $DIR/const-unwrap.rs:9:1
   |
LL | const BAR: i32 = Option::<i32>::None.unwrap();
   | ----------------------------------------------
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

